welcome.lessons.welcome.bat.bool1.LastDigit.scala.error
lastDigit:2: error: reassignment to val
          if (aaaa = 1){
                   ^